--- a/css/styles.css
+++ b/css/styles.css
@@ -28,7 +28,7 @@ header {
 #contenedorblanco h1{
 	font-weight: 600;
 	color: rgb(86, 66, 115);
-	padding: 0 0 2%;
+	padding: 0;
 }
 #botonhacertest{
 	padding: 1% 5%;
@@ -71,7 +71,7 @@ header {
 }
 #formatotab{
 	font-family: 'Dosis';
-	font-size: 16px;
+	font-size: 14px;
 	font-weight: 600;
 }
 /* FIN TABS */
@@ -79,7 +79,8 @@ header {
 #txtamarillo{
 	font-size: 54px;
 	color: #ffc352;
-	padding-left: 7%;
+	padding-left: 8%;
+	line-height: 0.9;
 }
 #txtrosa{
 	font-size: 14px;
@@ -99,7 +100,7 @@ header {
 }
 #txtgris{
 	font-size: 14px;
-	font-family: 'Ubuntu';
+	font-family: 'Dosis';
 	color: rgb(153, 153, 153);
 	line-height: 1.3;
 	font-weight: 400;
@@ -121,24 +122,25 @@ h3{
 .form-control{
 	font-size: 15px;
 	height: 50px;
-	font-family: 'Ubuntu';
+	font-family: 'Dosis';
 	letter-spacing: 1px;
 	color: rgb(161, 161, 161);
 }
 .completa2{
-	font-size: 20px;
+	font-size: 18px;
 	line-height: 1;
+	font-weight: 600;
 }
 /* FIN COLORES DE FUENTE */
 #linea{
-	font-size: 20px;
+	font-size: 18px;
 	line-height: 2.2;
 	color: rgb(230, 230, 230);
 }
 /* FORMATO ACORDEON */
 #pills{
 	float: left;
-	margin-left: 2%;
+	margin-left: 5%;
 }
 #pills .toggle-box {
     margin-top: 20px;
@@ -166,8 +168,10 @@ h3{
     -webkit-border-bottom-left-radius: 4px;
     margin-top: 2%;
     color: rgb(86, 66, 115);
-    font-family: 'Ubuntu';
+    font-family: 'Dosis';
     font-size: 18px;
+    font-weight: 600;
+    letter-spacing: 1.2px;
 }
 
 #pills .toggle-title:hover,
@@ -212,10 +216,10 @@ h3{
    	margin-bottom: 2%;
 }
 #pills .toggle-box p{
-	font-family: 'Ubuntu';
+	font-family: 'Dosis';
    	font-size: 14px;
-   	text-align: justify;
    	margin: 3%;
+   	letter-spacing: 0.7px;
    	color: rgb(153, 153, 153);
 }
 /* FIN FORMATO ACORDEON */
@@ -271,7 +275,7 @@ h3{
 #cardsvg{
 	width: 10.5%;
 	padding-left: 1%;
-	margin-bottom: 2%;
+	margin-bottom: 5%;
 }
 .fstsvg{
 	margin-left: 1.5%;
@@ -288,7 +292,7 @@ h3{
 #pcostado{
 	float: left;
 	width: 40%;
-	margin-left: 2%;
+	margin-left: 5%;
 }
 #pcostado2{
 	display: inline;
