--- a/css/landscapestyles.css
+++ b/css/landscapestyles.css
@@ -150,10 +150,24 @@ h3{
 }
 .form-control{
 	font-size: 15px;
-	height: 50px;
+	height: 42px;
 	font-family: 'Dosis';
 	letter-spacing: 1px;
-	color: rgb(161, 161, 161);
+	color: #666;
+}
+::-webkit-input-placeholder { /* Chrome */
+  color: rgb(160, 160, 160);
+}
+:-ms-input-placeholder { /* IE 10+ */
+  color: rgb(160, 160, 160);
+}
+::-moz-placeholder { /* Firefox 19+ */
+  color: rgb(160, 160, 160);
+  opacity: 1;
+}
+:-moz-placeholder { /* Firefox 4 - 18 */
+  color: rgb(160, 160, 160);
+  opacity: 1;
 }
 .completa2{
 	font-size: 18px;
@@ -175,8 +189,7 @@ h3{
     margin-top: -5%;
 }
 #pills .accordion {
-    margin-top: 0;
-
+    margin-top: 20px;
 }
 
 #pills .accordion p {
