--- a/css/landscapestyles.css
+++ b/css/landscapestyles.css
@@ -148,6 +148,10 @@ h3{
 	font-size: 24px;
 	color: rgb(86, 66, 115);
 }
+#auxelegi{
+	margin-left: 50.5%;
+	width: 100%;
+}
 .form-control{
 	font-size: 15px;
 	height: 42px;
